force-app/main/default/objects/KYC__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Bank_Customer__c</referenceTo>
    <relationshipLabel>KYCs</relationshipLabel>
    <relationshipName>KYCs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>