force-app/main/default/objects/KYC__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>