force-app/main/default/objects/KYC__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adhar</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>