force-app/main/default/objects/KYC__c/fields/Verification_Status__c.field-meta.xml
<CustomField>

    <label>Verification Status</label>
    <fullName>Verification_Status__c</fullName>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName></value>
            <value><fullName>Verified</fullName></value>
            <value><fullName>Rejected</fullName></value>
        </valueSetDefinition>
    </valueSet>

    <defaultValue>"Pending"</defaultValue>

</CustomField>